# SpiderX

./: .replit  COMPETITIVE_ANALYSIS.md  README.md  demo_spiderx.py  main.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  run_spiderx.py  spiderx_cli.py  spiderx_english.py  spiderx_final.py  spiderx_legendary.py  test_english.py  test_legendary.py  test_spiderx.py
attached_assets/: Pasted-Skip-to-content-Navigation-Menu-devanshbatham-ParamSpider-Type-to-search-Code-Issues-26--1755159148445_1755159148445.txt  Pasted-import-argparse-import-os-import-logging-import-colorama-from-colorama-import-Fore-Style-from--1755159178400_1755159178401.txt
spiderx/: __init__.py  advanced_features.py  cli_core.py  core.py  exporters.py  filters.py  models.py  smart_crawler.py  utils.py  vulnerability_detector.py
spiderx/sources/: __init__.py  crawler.py  javascript.py  manager.py  sitemap.py  wayback.py
static/: app.js  style.css
templates/: index.html
